--- a/src/Properties/Resources.resx
+++ b/src/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="CPU" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CPU.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Feature" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Feature.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="LogicalDisk" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\LogicalDisk.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
