--- a/src/Properties/Resources.resx
+++ b/src/Properties/Resources.resx
@@ -136,4 +136,7 @@
   <data name="PhysicalDisk" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PhysicalDisk.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="WinInfo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\WinInfo.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
